# sentiment_prediction_e2e

./: .gitignore  Makefile  README.md  dvc.yaml  projectflow.txt  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  make.bat
exp_models/exp-2/: MLmodel  conda.yaml  input_example.json  model.pkl  python_env.yaml  serving_input_example.json
exp_models/exp-3/: MLmodel  model.pkl  python_env.yaml
flask_app/: app.py
notebooks/: data.csv  exp1.ipynb  exp2_bow_vs_tfidf.py  exp3_lor_bow_hp.py
notebooks/exp_models/exp-1/: MLmodel  model.pkl
src/connections/: ssms_connection.py
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
