[project]
name = "sentiment-prediction-e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.3",
    "mlflow>=3.4.0",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "xgboost>=3.0.5",
]
