[project]
name = "sentiment-prediction-e2e"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "awscli>=1.42.59",
    "cookiecutter>=2.6.0",
    "dagshub>=0.6.3",
    "dvc[all,s3]==3.51.0",
    "flask>=3.1.2",
    "mlflow>=3.4.0",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "scikit-learn>=1.7.2",
    "setuptools>=80.9.0",
    "wandb>=0.22.3",
    "xgboost>=3.0.5",
]
